<resources>
    <string name="app_name">Terra</string>

    <!-- Strings related to login -->
    <string name="Inicio">Email</string>
    <string name="Contraseña">Password</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Invitado">Invitado</string>
    <string name="Regristro">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El correo es incorrecto</string>
    <string name="error_invalid_password">La contraseña es demaciado corta</string>
    <string name="error_incorrect_password">contraseña incorecta</string>
    <string name="error_field_required">este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_mapa_privilegios">mapaPrivilegios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mapa_invitados">mapaInvitados</string>
    <string name="title_activity_ventana_principal">Sign in</string>
</resources>
